# sighthound-content-ops

./: .depcheckignore  .depcheckrc.json  .gitignore  ACTIVITY_HISTORY_UX_GUIDE.md  AGENTS.md  AI_ASSISTANT_INTEGRATION_ANALYSIS.md  AI_ASSISTANT_PHASE_SUMMARY.md  AI_PRACTICAL_USE_CASES.md  AUDIT_RESULTS.md  BUILD_VERIFICATION.md  CLAUDE.md  CLEANUP_SUMMARY.md  CLEANUP_TODO.md  CODEBASE_AUDIT_REPORT.md  COMPLETE_ERROR_FIX_SUMMARY.md  Context-Aware AI Workflow Assistant (MVP).md  FEATURE_DELIVERY_SUMMARY.txt  FINAL_AUDIT_SUMMARY.txt  FINAL_VERIFICATION_REPORT.md  FIXES_ERROR_MESSAGE_EXPOSURE.md  GOVERNANCE_AUDIT_EXECUTIVE_SUMMARY.md  GOVERNANCE_ENFORCEMENT.md  GOVERNANCE_QUICK_START.md  GOVERNANCE_ROADMAP.md  Global Floating AI Assistant - Premium UX Upgrade.md  HIGH_PRIORITY_TRIAGE.md  HOW_TO_USE_APP.md  IMPLEMENTATION_SUMMARY.md  MERGE_READY.md  OPERATIONS.md  PHASE_0_COMPLETE.md  PHASE_2_COMPLETION_REPORT.md  PHASE_C_COMPLETION.md  PHASE_E_COMPLETION.md  PROJECT_COMPLETION_SUMMARY.md  Phase 0_ Deterministic Workflow Intelligence (Blocker Before AI).md  README 2.md  README.md  SPECIFICATION 2.md  SPECIFICATION.md  (+25 more)
deft/: AGENTS.md  CHANGELOG.md  PRD.md  PROJECT.md  README.md  REFERENCES.md  ROADMAP.md  SKILL.md  SPECIFICATION.md  Taskfile.yml  commands.md  main.md  pyproject.toml  run
deft/.github/: PULL_REQUEST_TEMPLATE.md
deft/coding/: coding.md  testing.md
deft/context/: context.md  examples.md  long-horizon.md  tool-design.md  working-memory.md
deft/core/: project.md
deft/interfaces/: web.md
deft/languages/: c#.md  c.md  commands.md  cpp.md  dart.md  delphi.md  elixir.md  go.md  java.md  (+13 more)
(+622 files in other folders)
